# ML_PLATFORM

./: .gitignore  README.md  Taskfile.yml  devbox.json  pyproject.toml  run-docker-app  setup-env  setup-env.sh
.github/actions/s3cmd-docker/: .s3cfg  Dockerfile  README.md  action.yml  entrypoint.sh
.github/workflows/: build-push-images.yml  ci.yml  update_artifact_path.yml  update_artifacts_and_deploy.yml
cicd/github-actions/: Taskfile.yml
data_platform/: Dockerfile  Taskfile.yml  configmap.yml  script.py  spark.yml
data_platform/install/: install-spark-operator
deploy/k8s/: Taskfile.yml
deploy/k8s/apps/python-api/: Dockerfile  Taskfile.yml  build-image  main.py  postgres_conn.py  pyproject.toml
deploy/k8s/apps/python-api/manifests/: IngressRoute.yml  deployment.yml  secret.yml  service.yml
deploy/k8s/apps/streamlit/: Dockerfile  Taskfile.yml  build-image  main.py  postgres_conn.py  pyproject.toml  setup-env
deploy/k8s/apps/streamlit/manifests/: deployment.yml  secret.yml  service.yml
deploy/k8s/common/: Taskfile.yml  ingress.yml  middleware.yml
deploy/k8s/postgres/: Taskfile.yml  db-migrator.yml  db-password.yml
helper/: get_k8s_config.py
inference_service/: input.json  mlflow.yml  prediction  serve.ipynb
inference_service/install/: serverless-kserve-installation
ml_platform/: ml_platform.ipynb  ray_serve.py  ray_tune.ipynb  serve.ipynb  start-mlflow-server
ml_platform/best_model_artifacts/: .env  .env.best_run  .s3cfg  Procfile  build_image  conda.yaml  deploy_local  envfile  input.json  model_remote.py  prediction  s3_config
ml_platform/best_model_artifacts/inference_service/: input.json  mlflow.yml  mlflow.yml.tmpl  prediction
ml_platform/install/: serverless-kserve-installation
ml_platform/kserve/: serverless_installation
ray_comps/: ml_platform.py  start-mlflow-server
terraform/providers/ionos-cloud/: main.tf  terraform.tfstate  terraform.tfstate.backup  tfplan
