[tool.poetry]
description = "Python apps on K8s"
authors = ["Sajad Safarveisi"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.10"
requests = "^2.32.3"
mlflow = "^2.20.0"
ray = {extras = ["data", "serve", "train", "tune"], version = "^2.41.0"}
xgboost = "^2.1.3"
optuna = "^4.2.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.3"
black = {extras = ["jupyter"], version = "^24.10.0"}
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
