[tool.poetry]
description = "Python apps on K8s"
authors = ["Sajad Safarveisi"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.10"
requests = "^2.32.3"
mlflow = "^2.20.0"
xgboost = "^2.1.3"
scikit-learn = "1.5.2"
ray = {extras = ["train", "tune"], version = "^2.41.0"}
boto3 = "1.35.99"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.3"
black = {extras = ["jupyter"], version = "^24.10.0"}
pyyaml = "^6.0.2"
emoji = "^2.14.1"
uv = "^0.5.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
