[tool.poetry]
description = "Python Fast API"
authors = ["Sajad Safarveisi"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.10"
fastapi = "^0.115.6"
psycopg = {extras = ["binary", "pool"], version = "^3.2.4"}
gunicorn = "^23.0.0"
uvicorn-worker = "^0.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.3"
black = {extras = ["jupyter"], version = "^24.10.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
