[tool.poetry]
description = "Streamlit App"
authors = ["Sajad Safarveisi"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.10"
streamlit = "^1.41.1"
sqlalchemy = "^2.0.37"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.3"
black = {extras = ["jupyter"], version = "^24.10.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
